--- a/application-layer.html
+++ b/application-layer.html
@@ -22,7 +22,6 @@
                 <a href="network-layer.html">Network Layer</a>
                 <a href="link-layer.html"> Link Layer</a>
                 <a href="intro-to-os.html">Intro to OS</a>
-                <a href="os-scheduling.html">OS Scheduling</a>
                 <a href="literature-review.html">Literature Review</a>
             </div>
         </div>
@@ -72,8 +71,11 @@
             <td>Less expensive to maintain</td>
             <td>Performance may be slower</td>
         </tr>
-
+    </table>
     <p> Socket Programming enables two applications to communicate over a network using TCP and UDP. A socket is an endpoint for receiving data across a network, acting as a communication gateway between applications. Sockets are identified by their IP address and port number</p>
+
+    <a href="Intro_to_Python.html">Seminar work here</a>
+    <p><i>This may take a while to load as the content is an exported Jupyter Notebook.</i></p>    
  </div>
 </body>
 </html>
