--- a/literature-review.html
+++ b/literature-review.html
@@ -23,13 +23,21 @@
                 <a href="network-layer.html">Network Layer</a>
                 <a href="link-layer.html"> Link Layer</a>
                 <a href="intro-to-os.html">Intro to OS</a>
-                <a href="os-scheduling.html">OS Scheduling</a>
                 <a href="literature-review.html">Literature Review</a>
             </div>
         </div>
     </ul>
 </nav>
 </header> 
- 
+ <div class="content-wrapper">
+    <p><b><i> This is a literature review conducted on a proposal TrustOTP. 
+        <a href="https://www.cs.wm.edu/~ksun/csci680-f15/papers/TrustOTP-CCS.pdf
+        ">Here</a> is a link to the literature I studied.</i></b></p>
+
+    <div class="vid-container">
+    <video controls="" src="vid/Lit-review.mp4"></video>
+
+    </div>
+ </div>
 </body>
 </html>
