--- a/application-layer.html
+++ b/application-layer.html
@@ -74,8 +74,10 @@
     </table>
     <p> Socket Programming enables two applications to communicate over a network using TCP and UDP. A socket is an endpoint for receiving data across a network, acting as a communication gateway between applications. Sockets are identified by their IP address and port number</p>
 
-    <a href="Intro_to_Python.html">Seminar work here</a>
-    <p><i>This may take a while to load as the content is an exported Jupyter Notebook.</i></p>    
+    <img src="img/WK-3-SK.png" alt="">
+<p> This code simulates trace route, which traces the route that a packet takes to its destination. The output shows a list of the routers, or hops that the packets travelled to to reach its destination. This will change based on what networks you are connected to. The code below simulates this process with google.co.uk</p>
+<img src="img/WK-3-TR.png" alt="">
+
  </div>
 </body>
 </html>
