--- a/intro-to-NOS.html
+++ b/intro-to-NOS.html
@@ -40,6 +40,9 @@
 <p> The Internet ties together different networks via Internet Protocol (IP). 2020 provided the statistic that the internet has <i> 4.57 billion users and 1.8 billion websites.</i></p>
 <p>The Internets structure consists of a network edge (hosts, being clients and servers), Access networks and physical media (wired and wireless communication links) and a Network core (interconnected routers).</p>
 <p>The Internet uses packet switching over circuit switching. Packet switching is when data is broken down data into smaller packets to be sent the reassembeled at its destination. Circuit switching is used by phones which is a dedicated communication path set up between two devices for a conversation. This is moreso used for traditional phone calls. </p>
+<a href="Intro_to_Python.html">Seminar work here</a>
+<p><i>This may take a while to load as the content is an exported Jupyter Notebook.</i></p>    
+
 </div>
 </body>
 </html>
