--- a/literature-review.html
+++ b/literature-review.html
@@ -32,12 +32,19 @@
  <div class="content-wrapper">
     <p><b><i> This is a literature review conducted on a proposal TrustOTP. 
         <a href="https://www.cs.wm.edu/~ksun/csci680-f15/papers/TrustOTP-CCS.pdf
-        ">Here</a> is a link to the literature I studied.</i></b></p>
+        ">Here</a> is a link to the literature I studied. If the video does not work, the presentation itself is below.</i></b></p>
+        
 
     <div class="vid-container">
     <video controls="" src="vid/Lit-review.mp4"></video>
+    </div>
+    <div class="pp-container">
+        <iframe src="https://goldsmithscollege-my.sharepoint.com/personal/madeb001_campus_goldsmiths_ac_uk/_layouts/15/Doc.aspx?sourcedoc={6f9df0d7-c218-4919-ad3a-e4c2d8e91a7f}&amp;action=embedview&amp;wdAr=1.7777777777777777" width="952px" height="576px" frameborder="0">This is an embedded <a target="_blank" href="https://office.com">Microsoft Office</a> presentation, powered by <a target="_blank" href="https://office.com/webapps">Office</a>.</iframe>
+
+
 
     </div>
+
  </div>
 </body>
 </html>
